--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "Server"]
 	path = Server
-	url = git@github.com:stars-under/PhoneLink.git
+	url = git@github.com:stars-under/PhoneLink-for-Server.git
 [submodule "Windows"]
 	path = Windows
 	url = git@github.com:stars-under/PhoneLinkPC.git
+[submodule "Android"]
+	path = Android
+	url = git@github.com:stars-under/PhoneLink-for-Android.git
